# fjell-os

./: .gitignore  CHANGELOG.md  Cargo.toml  HANDOFF-v0.9-v0.15.md  NOTICE  README.md  RELEASE.md  ROADMAP.md  TERMS_OF_USE.md  UNSAFE_CHARTER.md  dev-summary-v0.0.3-final.md  dev-summary-v0.0.4.md  dev-summary-v0_2_x.md  liblease_epoch.rlib  libmirror_selection.rlib  librights_lattice.rlib  rust-toolchain.toml
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
benches/: Cargo.toml
benches/benches/: audit_record.rs  bundle_digest.rs  cap_ops.rs  manifest_parse.rs  semantic_encode.rs
crates/fjell-arch-arm64/: Cargo.toml
crates/fjell-arch-arm64/src/: lib.rs
crates/fjell-arch-riscv64/: Cargo.toml
crates/fjell-arch-riscv64/src/: lib.rs
crates/fjell-attestation-format/: Cargo.toml
crates/fjell-attestation-format/schema/: v2.frozen
crates/fjell-attestation-format/src/: lib.rs  tests_v2.rs  v2.rs
crates/fjell-attestd/: Cargo.toml
crates/fjell-attestd/src/: main.rs
crates/fjell-auditd/: Cargo.toml
crates/fjell-auditd/src/: main.rs
crates/fjell-bootctl/: Cargo.toml  build.rs
crates/fjell-bootctl-model/: Cargo.toml
crates/fjell-bootctl-model/proptest-regressions/: lib.txt
crates/fjell-bootctl-model/src/: lib.rs
crates/fjell-bootctl/src/: main.rs
crates/fjell-bundle-format/: Cargo.toml
crates/fjell-bundle-format/src/: lib.rs
crates/fjell-cap-broker/: Cargo.toml  link.ld
crates/fjell-cap-broker/src/: main.rs
crates/fjell-cap-manifest/: Cargo.toml
crates/fjell-cap-manifest/src/: lib.rs
crates/fjell-config-sync/: Cargo.toml
crates/fjell-config-sync/src/: lib.rs
crates/fjell-config-sync/tests/: runtime_trial.rs
crates/fjell-configd/: Cargo.toml
crates/fjell-configd/src/: main.rs
crates/fjell-dev-harness/: Cargo.toml
crates/fjell-dev-harness/src/: lib.rs
crates/fjell-diag-format/: Cargo.toml
crates/fjell-diag-format/schema/: bundle-v1.frozen
crates/fjell-diag-format/src/: builder.rs  bundle.rs  events.rs  intents.rs  lib.rs  tests.rs
crates/fjell-diagnosticsd/: Cargo.toml
crates/fjell-diagnosticsd/src/: main.rs  rt.rs
crates/fjell-driver-virtio-net/: Cargo.toml
crates/fjell-driver-virtio-net/src/: main.rs  rt.rs
crates/fjell-driver-virtio-net/src/core/: features.rs  lib.rs  mmio.rs  ring.rs  state.rs  tests.rs  virtq.rs
crates/fjell-dtb-derive/: Cargo.toml
crates/fjell-dtb-derive/src/: compat.rs  derive.rs  lib.rs  parser.rs  tests.rs
crates/fjell-dtb-validate/: Cargo.toml
crates/fjell-dtb-validate/src/: lib.rs
crates/fjell-fleet-format/: Cargo.toml
crates/fjell-fleet-format/src/: action.rs  digest.rs  lib.rs  policy.rs  rollout.rs  roster.rs  tests.rs
crates/fjell-fleet-sync/: Cargo.toml
crates/fjell-fleet-sync/src/: lib.rs
crates/fjell-fleet-sync/tests/: partition_drill.rs
crates/fjell-fleetd/: Cargo.toml
crates/fjell-fleetd/src/: main.rs  rt.rs
crates/fjell-identity-format/: Cargo.toml
crates/fjell-identity-format/schema/: node-identity-v1.frozen
crates/fjell-identity-format/src/: digest.rs  identity.rs  lib.rs  policy.rs  tests.rs
crates/fjell-identityd/: Cargo.toml
crates/fjell-identityd/src/: main.rs
crates/fjell-init/: Cargo.toml
crates/fjell-init/src/: main.rs  rt.rs
crates/fjell-kernel/: Cargo.toml  build.rs  link.ld
crates/fjell-kernel/.cargo/: config.toml
crates/fjell-kernel/src/: boot.rs  console.rs  main.rs  uart.rs
crates/fjell-kernel/src/arch/: mod.rs
crates/fjell-kernel/src/arch/riscv64/: asm.rs  csr.rs  mod.rs  pte.rs  satp.rs  timer.rs  trap.rs
crates/fjell-kernel/src/audit/: mod.rs  ring.rs
crates/fjell-kernel/src/cap/: endpoint_table.rs  mod.rs  syscall.rs  table.rs
crates/fjell-kernel/src/lease/: mod.rs
crates/fjell-kernel/src/mm/: address.rs  boot_alloc.rs  error.rs  frame_alloc.rs  mod.rs  page_table.rs  region.rs  user_copy.rs  user_ptr.rs  vspace.rs
crates/fjell-kernel/src/platform/: dtb.rs  mod.rs  qemu_virt.rs
crates/fjell-kernel/src/task/: context.rs  id.rs  image.rs  mod.rs  scheduler.rs  spawn.rs  tcb.rs  user_image.rs
crates/fjell-kernel/src/trap/: dispatch.rs  entry.rs  fault.rs  mod.rs  syscall.rs
crates/fjell-keyring/: Cargo.toml
crates/fjell-keyring/schema/: snapshot-v1.frozen
crates/fjell-keyring/src/: algorithm.rs  anchor.rs  dev_provider.rs  epoch.rs  error.rs  keyring.rs  lib.rs  provider.rs  revocation.rs  snapshot.rs  tests.rs
crates/fjell-measuredd/: Cargo.toml
crates/fjell-measuredd/src/: main.rs
docs/: book.toml
fuzz/: Cargo.toml
fuzz/corpora/attestation_v2/: seed00  seed01
fuzz/corpora/board_profile/: seed00
fuzz/corpora/diagnostic_bundle/: seed00
fuzz/corpora/keyring_snapshot/: seed00
fuzz/corpora/release_metadata/: seed00
fuzz/corpora/rollback_record/: seed00
fuzz/corpora/semantic_record/: seed00  seed01
fuzz/corpora/update_index/: seed00
fuzz/fuzz_targets/: attestation_v2_parse.rs  board_profile_parse.rs  diagnostic_bundle_parse.rs  keyring_snapshot_parse.rs  release_metadata_parse.rs  rollback_record_parse.rs  semantic_record_parse.rs  update_index_parse.rs
rfcs/: 000-rfc-lifecycle-policy.md  001-fix-trap-entry-t5-t6-register-save.md  005-sys-mmio-map-ram-exclusion.md  006-lease-binding-in-capability.md  007-per-task-dma-allocator.md  009-wx-kernel-page-permissions.md  010-task-handle-generation-abi.md  011-service-separation.md  012-real-digest-verification.md  013-adr-creation-m6-m7.md  015-lease-validation-in-ipc-cap-paths.md  016-mmio-region-capability.md  017-dma-region-capability.md  018-wx-three-region-linker-align.md  019-ipc-try-recv-cooperative-services.md  020-audit-drain-implementation.md  021-cap-broker-policy-evaluation.md  022-task-start-entry-validation.md  023-bcb-mirror-selection-tests.md  024-release-freeze-and-scope-declaration.md  025-ci-qemu-automation-foundation.md  026-negative-test-harness.md  027-threat-model-and-security-boundaries.md  028-syscall-abi-protocol-inventory.md  029-capability-lease-enforcement-audit.md  030-mmio-dma-boundary-audit.md  031-unified-capability-enforcement.md  032-capability-slot-drop-cspace-gc.md  (+27 more)
(+643 files in other folders)
