[workspace]
resolver = "2"

# All crates that exist in the repository.
members = [
    "crates/fjell-kernel",
    "crates/fjell-arch",
    "crates/fjell-abi",
    "crates/fjell-syscall",
    "crates/fjell-cap",
    "crates/fjell-ipc",
    "crates/fjell-audit-format",
    "crates/fjell-config-format",
    "crates/fjell-semantic-format",
    "crates/fjell-service-api",
    "crates/fjell-init",
    "crates/fjell-recoveryd",
    "crates/fjell-syncd",
    "crates/fjell-summaryd",
    "crates/fjell-identityd",
    "crates/fjell-attestd",
    "crates/fjell-measuredd",
    "crates/fjell-recovery-format",
    "crates/fjell-attestation-format",
    "crates/fjell-measure-format",
    "crates/fjell-service-manager",
    "crates/fjell-auditd",
    "crates/fjell-configd",
    "crates/fjell-proxy-text",
    "crates/fjell-neg-test",
    "crates/fjell-svc-timeout",
    "crates/fjell-svc-fault",
    "crates/fjell-sample-service",
    "crates/fjell-devmgr",
    "crates/fjell-driver-virtio-blk",
    "crates/fjell-storaged",
    "crates/fjell-bootctl",
    "crates/fjell-upgraded",
    "crates/fjell-powerd",
    "crates/fjell-verifyd",
    "crates/fjell-rootfsd",
    "crates/fjell-snapshotd",
    "crates/fjell-verify-format",
    "crates/fjell-rootfs-format",
    "crates/fjell-snapshot-format",
    "crates/fjell-device-format",
    "crates/fjell-block-format",
    "crates/fjell-store-format",
    "crates/fjell-upgrade-format",
    "crates/fjell-semantic-stream",
    "crates/fjell-cap-broker",
    "crates/fjell-tools",
    "crates/fjell-trust-provider",
    "crates/fjell-keyring",
    "crates/fjell-net-format",
    "crates/fjell-driver-virtio-net",
    "crates/fjell-netd",
    "crates/fjell-sxt-crypto",
    "crates/fjell-secure-transportd",
    "crates/fjell-diag-format",
    "crates/fjell-diagnosticsd",
    "crates/fjell-platform-format",
    "crates/fjell-semantic-v1",
    "crates/fjell-dtb-derive",
    "crates/fjell-summary-format",
    "crates/fjell-identity-format",
    "crates/fjell-arch-arm64",
    "crates/fjell-proptest",
    "crates/fjell-bootctl-model",
    "tools/fjell-unsafe-audit",
    "crates/fjell-store-model",
    "crates/fjell-arch-riscv64",
]
# Default build/check/test targets when no --package / --workspace flag is given.
#
# fjell-kernel is intentionally excluded here because it is a no_std / no_main
# bare-metal binary that must be cross-compiled for riscv64gc-unknown-none-elf.
# Building it for the host would fail at the assembly or linker stage.
# To build the kernel use:
#   cargo build --package fjell-kernel --target riscv64gc-unknown-none-elf
# or:
#   cargo xtask qemu
# `cargo build --workspace` (or `cargo check --workspace`) still works because
# --workspace overrides default-members and includes all members explicitly.
# For everyday host-side development use:
#   cargo build  (no flags — uses default-members)
#   cargo check  (no flags — uses default-members)
default-members = [
    # format crates (host-testable)
    "crates/fjell-cap",
    "crates/fjell-ipc",
    "crates/fjell-audit-format",
    "crates/fjell-config-format",
    "crates/fjell-semantic-format",
    "crates/fjell-service-api",
    "crates/fjell-recovery-format",
    "crates/fjell-attestation-format",
    "crates/fjell-measure-format",
    "crates/fjell-net-format",
    "crates/fjell-platform-format",
    "crates/fjell-semantic-v1",
    "crates/fjell-snapshot-format",
    "crates/fjell-identity-format",
    "crates/fjell-summary-format",
    "crates/fjell-diag-format",
    "crates/fjell-upgrade-format",
    "crates/fjell-store-format",
    "crates/fjell-block-format",
    "crates/fjell-rootfs-format",
    "crates/fjell-verify-format",
    "crates/fjell-device-format",
    "crates/fjell-trust-provider",
    "crates/fjell-keyring",
    "crates/fjell-sxt-crypto",
    "crates/fjell-dtb-derive",
    "crates/fjell-proptest",
    "crates/fjell-store-model",
    "crates/fjell-bootctl-model",
    "tools/fjell-unsafe-audit",
]
[workspace.package]
version = "0.7.1"
edition = "2024"
authors = ["nabbisen"]
license = "Apache-2.0"
repository = "https://github.com/nabbisen/fjell-os"
[workspace.dependencies]
# Shared dependencies will be added here as development progresses.
# Format crates use serde for serialization.
# Profiles must be defined at the workspace root.
# panic = "abort" is mandatory for no_std kernel crates (unwinding requires std).
# Host-side crates (fjell-tools, service binaries) also inherit abort, which is
# acceptable — they are not libraries that need to support unwinding callers.
[profile.dev]
panic = "abort"
[profile.release]
lto = true
opt-level = "s"
[workspace.metadata.fjell.ci_excluded]
"fjell-kernel"    = { reason = "cross-compile only; no-std bare-metal; use cargo xtask qemu" }
"fjell-svc-fault" = { reason = "intentional fault-test target; covered by QEMU smoke" }
"fjell-svc-timeout" = { reason = "intentional timeout-test target; covered by QEMU smoke" }
"fjell-neg-test"  = { reason = "negative-test smoke binary; covered by QEMU smoke" }
