[package]
name = "fjell-auditd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "fjell-auditd"
path = "src/main.rs"

[dependencies]
fjell-audit-format = { path = "../fjell-audit-format" }
fjell-abi         = { path = "../fjell-abi" }
fjell-syscall     = { path = "../fjell-syscall" }
fjell-service-api = { path = "../fjell-service-api" }
