[package]
name        = "fjell-bundle-format"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ServiceBundle wire format and canonical digest (RFC v0.9-004)."
publish     = false

[dependencies]
fjell-measure-format    = { path = "../fjell-measure-format" }
fjell-cap-manifest      = { path = "../fjell-cap-manifest" }
