[package]
name = "fjell-configd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "fjell-configd"
path = "src/main.rs"

[dependencies]
fjell-abi         = { path = "../fjell-abi" }
fjell-syscall     = { path = "../fjell-syscall" }
fjell-service-api = { path = "../fjell-service-api" }
