[package]
name = "fjell-init"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "fjell-init"
path = "src/main.rs"

[dependencies]
fjell-abi         = { path = "../fjell-abi" }
fjell-syscall     = { path = "../fjell-syscall" }
fjell-service-api = { path = "../fjell-service-api" }
