[package]
name = "fjell-init"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
[[bin]]
name = "fjell-init"
path = "src/main.rs"
[dependencies]
fjell-abi              = { path = "../fjell-abi" }
fjell-syscall          = { path = "../fjell-syscall" }
fjell-service-api      = { path = "../fjell-service-api" }
fjell-semantic-format  = { path = "../fjell-semantic-format" }
fjell-proxy-text       = { path = "../fjell-proxy-text" }
fjell-store-format     = { path = "../fjell-store-format" }
fjell-upgrade-format   = { path = "../fjell-upgrade-format" }
fjell-verify-format   = { path = "../fjell-verify-format" }
fjell-rootfs-format   = { path = "../fjell-rootfs-format" }
fjell-snapshot-format = { path = "../fjell-snapshot-format" }
