[package]
name = "fjell-kernel"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "fjell-kernel"
path = "src/main.rs"

[dependencies]
fjell-abi = { path = "../fjell-abi" }
fjell-cap = { path = "../fjell-cap" }
fjell-ipc = { path = "../fjell-ipc" }
