[package]
name = "fjell-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "fjell-kernel"
path = "src/main.rs"

[dependencies]
fjell-audit-format = { path = "../fjell-audit-format" }
fjell-abi = { path = "../fjell-abi" }
fjell-cap = { path = "../fjell-cap" }
fjell-ipc = { path = "../fjell-ipc" }
